adds terraform and assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 venv/
 kms_demo.txt.encrypted
+run_command/assets/aws-validator.pem
+run_command/assets/client_linux.rb
+run_command/assets/client_windows.rb
+terraform/
+*.tfstate*
